# my-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/3d-viewer/: CMakeLists.txt
examples/3d-viewer/src/: main.cpp
examples/cube/: CMakeLists.txt  main.cpp
examples/cube/src/: main.cpp
gif/: rotate-cube.webm
src/: main.cpp
src/3d-engine/: consts.hpp
src/3d-engine/animations/: anim.hpp  animator.cpp
src/3d-engine/mesh/: mesh.cpp  mesh.hpp
src/3d-engine/vector/: vector.cpp  vector.hpp
src/3d-engine/world/: world.cpp  world.hpp
